fixed margins on mobile layout
Former-commit-id: dc0ffe4087eab1812c2e982d2365ff0b0c26d726

--- a/apps/dash-web-trader/assets/style.css
+++ b/apps/dash-web-trader/assets/style.css
@@ -800,6 +800,15 @@ summary::-webkit-details-marker {
   display: none;
 }
 
+@media only screen and (max-width: 548px) {
+  .chart-style{
+    padding-right: 0px;
+  }
+  .div-top-bar{
+    margin-bottom: 22px;
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .three, .nine {
     min-width: 100%;
